--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: 将静态内容部署到页面
 on:
   # 针对默认分支的推送上运行
   push:
-    branches: ['master']
+    branches: ['main']
 
   # 允许您从操作选项卡手动运行此工作流
   workflow_dispatch:
@@ -17,7 +17,7 @@ permissions:
 
 # 允许一个并行部署
 concurrency:
-  group: '页面'
+  group: 'pages'
   cancel-in-progress: true
 
 jobs:
@@ -30,23 +30,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: 设置 Node
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: './'
-      - name: 安装依赖
+      - name: install npm
         run: npm install
-      - name: 构建
+      - name: Checkout
         run: npm run build
-      - name: 设置页面
+      - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: 上传构件
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # 上传 dist 库
-          path: './docs'
-      - name: 部署到 GitHub Pages
+          path: '.'
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
