add some ton function

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://t.me/Xsy89757Bot",
     "name": "Xsy89757",
-    "iconUrl": "https://ton.vote/logo.png",
+    "iconUrl": "https://ton.vote/logo.png"
 }
