--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://ccyq1995.github.io/TeMiniApp_Web_App",
     "name": "TeMiniApp",
-    "iconUrl": "https://ton.vote/logo.png"
+    "iconUrl": "https://ccyq1995.github.io/TeMiniApp_Web_App/icon.png"
 }
