--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eruda": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "tonweb": "^0.0.66"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
