--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@tonconnect/ui-react": "^2.0.3",
     "@twa-dev/sdk": "^7.0.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "buffer": "^6.0.3",
     "eruda": "^3.0.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
