--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@orbs-network/ton-access": "^2.3.3",
+    "@tma.js/sdk": "^2.5.0",
+    "@tma.js/sdk-react": "^2.2.3",
     "@ton/core": "^0.56.3",
     "@ton/crypto": "^3.2.0",
     "@ton/ton": "^13.11.2",
